# worktree-agent

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  install.sh
.beads/: issues.jsonl
.claude/: settings.local.json
.claude/skills/wta/: SKILL.md
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
dashboard/: index.html  package-lock.json  package.json  vite.config.js
dashboard/src/: App.svelte  styles.css
dashboard/src/components/: DiffViewer.svelte  KanbanBoard.svelte  TaskCard.svelte  TaskModal.svelte
src/: editor.rs  error.rs  lib.rs  main.rs
src/cli/: attach.rs  claude_skill.rs  dashboard.rs  diff.rs  discard.rs  init.rs  launch.rs  list.rs  merge.rs  mod.rs  pr.rs  prune.rs  quickstart.rs  remove.rs  spawn.rs  status.rs  worktree.rs
src/git/: merge.rs  mod.rs  repository.rs  worktree.rs
src/orchestrator/: agent.rs  mod.rs  state.rs
src/provider/: mod.rs
src/tmux/: mod.rs
src/web/: api.rs  mod.rs  server.rs
tests/: README.md
tests/integration/: test-merge.sh
