[package]
name = "worktree-agent"
version = "0.1.0"
edition = "2021"
description = "Spawn Claude Code agents in isolated git worktrees, managed via tmux"
license = "MIT"

[[bin]]
name = "wta"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Async
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Git
git2 = "0.19"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Table display
tabled = "0.17"

# Web server
axum = "0.7"
tower-http = { version = "0.5", features = ["cors", "fs"] }
open = "5"

[dev-dependencies]
tempfile = "3"
